     _info.cfg file lacking an [info]title= value.
   * Fixed most of the minimap buttons and the End Turn button appearing
     without contents or in the wrong state during WML start events until they
     are interacted with or control is given to the player for the first time.
   * Added a button to copy the in-game Chat Log dialog contents to clipboard.
 * WML engine:
   * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
     not interrupt the game load sequence or display an error message in-game,
     resulting in loading malformed/incomplete WML data
     <http://r.wesnoth.org/p571380>.
   * Schema validator messages now conform better to the new WML
     parser/preprocessor diagnostics format introduced in version 1.11.10.
 * Miscellaneous and bug fixes:
   * Backported Elvish_Hunter's wmltools GUI from master
   * Changed the fungus overlay terrain to repect the game values of the mixed partner.
     Fixes the bug #21971
   * Default to classic minimap unit/village color coding. (colored by side)
   * Default to classic minimap terrain representation. (satellite view)
   * Default hotkey binding for the terrain description help action. (ctrl+t)
   * Deleted obsolete UI themes.
   * Disabled the orbs for enemy units.
   * Display the tooltip for actions browsed in the hotkey preferences dialog.
   * Enabled action icons in the hotkey preferences dialog.
   * Fix bug #21717: "F5->reload wml tree" doesn't work in editor.
   * Fix bug #21298: Minimap shows invisible overlays
   * Fix bug #22116: unlock movement when attacking enemy+discovering in fog
   * Fix bug #21397: "Saving and loading may cause a side's turn is not
     initialized".
   * Fix bug which caused no units to be displayed when reloading an end of
     scenario save, by stripping them from the save file. However, this does
     not fix bug #15545, which was the reason that this behavior was introduced.